Test komga more thoroughly!
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/komga/ci/goss.yaml
+++ b/apps/komga/ci/goss.yaml
@@ -4,8 +4,12 @@ process:
   java:
     running: true
 
+port:
+  tcp:25600:
+    listening: true
+
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
-# http:
-#   http://localhost:8080:
-#     status: 200
-#     timeout: 5000
+http:
+  http://localhost:25600:
+    status: 200
+    timeout: 5000
