--- a/apps/stremio-jackett/Dockerfile
+++ b/apps/stremio-jackett/Dockerfile
@@ -6,17 +6,20 @@ RUN apk update && apk upgrade && \
 
 WORKDIR /app
 
-# Get latest dev
-RUN git clone -b dev https://github.com/aymene69/stremio-jackett.git /tmp/source && \
+# Get latest main (once dev is fixed we'll get it instead)
+RUN git clone -b main https://github.com/aymene69/stremio-jackett.git /tmp/source && \
     cp /tmp/source/package*.json ./ && \
     npm install && \
     cp -rf /tmp/source/* . && \
     rm -rf /tmp/source
 
-# Get ElfHosted branding
+
+# ElfHosted branding
 RUN git clone https://github.com/geek-cookbook/stremio-jackett.git /tmp/elfhosted && \
     cp /tmp/elfhosted/src/routes.js src/ && \
     cp /tmp/elfhosted/src/index.html src/ && \
+    cp /tmp/elfhosted/dist/index.html dist/ && \
     rm -rf /tmp/source
+
 
 CMD [ "npm", "start" ]
