--- a/apps/aria2/ci/goss.yaml
+++ b/apps/aria2/ci/goss.yaml
@@ -1,17 +1,11 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
 process:
-  node:
+  aria2:
     running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
 port:
   # https://github.com/aelsabbahy/goss/issues/149
-  tcp6:8000:
+  tcp6:6800:
     listening: true
-
-# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
-http:
-  http://localhost:8000:
-    status: 200
-    timeout: 5000
