--- a/apps/aria2/ci/goss.yaml
+++ b/apps/aria2/ci/goss.yaml
@@ -1,11 +1,11 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
 process:
-  aria2:
+  aria2c:
     running: true
 
-# https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
-port:
-  # https://github.com/aelsabbahy/goss/issues/149
-  tcp6:6800:
-    listening: true
+# # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
+# port:
+#   # https://github.com/aelsabbahy/goss/issues/149
+#   tcp6:6800:
+#     listening: true
