Update github CLI
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/tooling/Dockerfile
+++ b/apps/tooling/Dockerfile
@@ -29,6 +29,7 @@ RUN apt-get update && apt-get install -y \
 	rsync \
 	wget \
 	sqlite3 \
+	github-cli \
 	--no-install-recommends \
 	&& rm -rf /var/lib/apt/lists/* && \
 	cd /tmp && \
