--- a/apps/torrentio-producer/Dockerfile
+++ b/apps/torrentio-producer/Dockerfile
@@ -1,4 +1,5 @@
 FROM alpine:latest as cloner
+ARG CHANNEL
 
 RUN apk update && apk upgrade && \
     apk add --no-cache git
@@ -8,11 +9,9 @@ RUN git clone  -b $CHANNEL https://github.com/geek-cookbook/torrentio.elfhosted.
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
 WORKDIR /App
 
-ARG CHANNEL
-ARG VERSION
-
 WORKDIR /App
-COPY --from=cloner /tmp/source/* /App
+COPY --from=cloner /tmp/source/src/producer /App
+
 
 ENV PORT 7001
 
