--- a/apps/stremio-jackett/Dockerfile
+++ b/apps/stremio-jackett/Dockerfile
@@ -1,5 +1,5 @@
 ARG VERSION
-FROM belmeg/stremio-addon-jackett:${VERSION}
+FROM belmeg/stremio-addon-jackett
 
 # Add ElfHosted branding
 COPY apps/stremio-jackett/branding/* /app/dist/frontend/configure/
