--- a/apps/tooling/Dockerfile
+++ b/apps/tooling/Dockerfile
@@ -11,10 +11,10 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 # Add GitHub repo so we can get the gh cli
 # Per https://github.com/cli/cli/blob/trunk/docs/install_linux.md
-RUN type -p curl >/dev/null || (sudo apt update && sudo apt install curl -y) && \
+RUN type -p curl >/dev/null || (apt update && apt install curl -y) && \
 	curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg \
 	&& chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg \
-	&& echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
+	&& echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
 	&& apt update \
 	&& apt install gh -y
 
