--- a/apps/selfhostio/producer/goss.yaml
+++ b/apps/selfhostio/producer/goss.yaml
@@ -1,7 +1,7 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
 process:
-  node:
+  dotnet:
     running: true
 
 # # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
