--- a/apps/bazarr/Dockerfile
+++ b/apps/bazarr/Dockerfile
@@ -11,7 +11,8 @@ ENV \
     PIP_ROOT_USER_ACTION=ignore \
     PIP_NO_CACHE_DIR=1 \
     PIP_DISABLE_PIP_VERSION_CHECK=1 \
-    CRYPTOGRAPHY_DONT_BUILD_RUST=1
+    CRYPTOGRAPHY_DONT_BUILD_RUST=1 \
+    PIP_BREAK_SYSTEM_PACKAGES=1
 
 # for initial install
 USER root
