--- a/apps/torrentio/scraper/Dockerfile
+++ b/apps/torrentio/scraper/Dockerfile
@@ -10,7 +10,7 @@ WORKDIR /home/node/app
 
 ENV PORT 7001
 
-RUN git clone https://github.com/geek-cookbook/torrentio.elfhosted.com.git /tmp/source && \
+RUN git clone -b eztv-scraper https://github.com/geek-cookbook/torrentio.elfhosted.com.git /tmp/source && \
     cp /tmp/source/${CHANNEL}/package*.json ./ && \
     npm ci --only-production && \
     cp -rf /tmp/source/${CHANNEL}/* . && \
