Disable snappymail for now
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/komga/Dockerfile
+++ b/apps/komga/Dockerfile
@@ -5,6 +5,10 @@ FROM gotson/komga:${VERSION}
 # The upstream image is at https://github.com/gotson/komga/blob/master/komga/Dockerfile, in this case
 # we're simply using it, but ensuring that security-critical variables such as USER and ENTRYPOINT
 # are under our control
+
+# Make this writeable so that goss can test it
+RUN mkdir /config && chown 568 /config 
+
 USER 568
 ENV KOMGA_CONFIGDIR="/config"
 ENV LC_ALL=en_US.UTF-8
