--- a/apps/debrid-media-manager/ci/goss.yaml
+++ b/apps/debrid-media-manager/ci/goss.yaml
@@ -1,10 +1,8 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
-# process:
-#   python:
-#     running: true
-#   xterm:
-#     running: true    
+process:
+  next-router-wo:
+    running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
 port:
