--- a/apps/annatar/Dockerfile
+++ b/apps/annatar/Dockerfile
@@ -1,11 +1,12 @@
 # Get the elfhosted code
 FROM alpine:latest as cloner
 ARG CHANNEL
+ARG VERSION
 
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone --depth 1 https://gitlab.com/stremio-add-ons/annatar.git /source
+RUN git clone -b $VERSION --depth 1 https://gitlab.com/stremio-add-ons/annatar.git /source
 
 
 # --- Build Stage ---
