--- a/.github/workflows/renovate-schedule.yaml
+++ b/.github/workflows/renovate-schedule.yaml
@@ -13,9 +13,8 @@ on:
         default: "debug"
         required: false
   schedule:
-    # NOTE: The longest build for an app is roughly 1h20m (home-assistant/arm64)
-    # Keep this to run every 2 or more hours to prevent gremlins from spawning
-    - cron: "0 */2 * * *"
+    # Run at 15-past
+    - cron: "15 * * * *"
   push:
     branches:
       - main
