Add ElfHosted branding to Xtremio
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/xtremio/Dockerfile
+++ b/apps/xtremio/Dockerfile
@@ -18,6 +18,9 @@ RUN npm install
 
 COPY --from=cloner /source .
 
+# ElfHosted branding
+COPY apps/xtremio/branding/* .
+
 ENV NODE_ENV production
 
 EXPOSE 3649
