--- a/apps/mediafusion/Dockerfile
+++ b/apps/mediafusion/Dockerfile
@@ -6,7 +6,7 @@ ARG VERSION
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone --depth 1 https://github.com/mhdzumair/MediaFusion.git /source
+RUN git clone -b $VERSION --depth 1 https://github.com/mhdzumair/MediaFusion.git /source
 
 FROM python:3.11-slim-bullseye
 
