--- a/apps/mediafusion/Dockerfile
+++ b/apps/mediafusion/Dockerfile
@@ -18,7 +18,16 @@ RUN pip install --upgrade pip && \
     apt-get update && \
     apt-get install -y git
 
+RUN \
+    adduser elfie \
+        --uid 568 \
+        --group \
+        --system \
+        --disabled-password
+
+USER 568
 COPY --from=cloner /source/Pipfile /source/Pipfile.lock ./
+
 
 RUN pipenv install --deploy --ignore-pipfile
 
@@ -31,4 +40,4 @@ COPY --from=cloner /source .
 # Expose the port
 EXPOSE 8000
 
-CMD ["pipenv", "run", "gunicorn", "api.main:app", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000", "--timeout", "120"]
+CMD ["pipenv", "run", "gunicorn", "api.main:app", "-w", "4", "-k", "--system", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000", "--timeout", "120"]
