--- a/apps/mediafusion/Dockerfile
+++ b/apps/mediafusion/Dockerfile
@@ -40,4 +40,4 @@ COPY --from=cloner /source .
 # Expose the port
 EXPOSE 8000
 
-CMD ["pipenv", "run", "gunicorn", "api.main:app", "-w", "4", "-k", "--system", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000", "--timeout", "120"]
+CMD ["pipenv", "run", "gunicorn", "api.main:app", "-w", "4", "-k", "uvicorn.workers.UvicornWorker", "--bind", "0.0.0.0:8000", "--timeout", "120"]
