Update loglevel in community
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/stremio-jackett-community/Dockerfile
+++ b/apps/stremio-jackett-community/Dockerfile
@@ -2,6 +2,7 @@
 FROM alpine:latest as cloner
 ARG CHANNEL
 ARG VERSION
+ENV LOG_LEVEL critical
 
 RUN apk update && apk upgrade && \
     apk add --no-cache git
@@ -20,4 +21,4 @@ COPY --from=cloner /source .
 
 EXPOSE 3000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "3000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--log-level", "${LOG_LEVEL}","--port", "3000"]
