--- a/apps/debridmediamanager/Dockerfile
+++ b/apps/debridmediamanager/Dockerfile
@@ -11,7 +11,7 @@ RUN git clone --depth 1 https://github.com/geek-cookbook/debrid-media-manager.gi
 FROM node:18-alpine AS dependencies
 
 WORKDIR /app
-COPY --from=cloner /source/package.json package-lock.json ./
+COPY --from=cloner /source/package.json /source/package-lock.json ./
 RUN npm ci
 
 FROM node:18-alpine AS build
