--- a/apps/stremio-jackett/ci/goss.yaml
+++ b/apps/stremio-jackett/ci/goss.yaml
@@ -6,10 +6,10 @@ process:
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
 # unsure why this isn't working
-port:
-  # https://github.com/aelsabbahy/goss/issues/149
-  tcp6:3000:
-    listening: true
+# port:
+#   # https://github.com/aelsabbahy/goss/issues/149
+#   tcp6:3000:
+#     listening: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
