Fix stremio-jackett install
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/stremio-jackett/Dockerfile
+++ b/apps/stremio-jackett/Dockerfile
@@ -6,7 +6,7 @@ ARG VERSION
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone -b $VERSION --depth 1 https://github.com/aymene69/stremio-jackett-cacher.git /source
+RUN git clone -b $VERSION --depth 1 https://github.com/aymene69/stremio-jackett.git /source
 
 FROM python:3.11
 
@@ -17,6 +17,9 @@ COPY --from=cloner /source/requirements.txt .
 RUN pip install -r requirements.txt
 
 COPY --from=cloner /source/. .
+
+# Add ElfHosted branding
+COPY apps/stremio-jackett/branding/index.html .
 
 EXPOSE 3000
 
