--- a/apps/shluflix/Dockerfile
+++ b/apps/shluflix/Dockerfile
@@ -11,5 +11,6 @@ RUN git clone --depth 1 https://bitbucket.org/shluflix-stremio/shluflix.git /sou
 FROM ghcr.io/geek-cookbook/alpine-node:20@sha256:34e579ce8fd045ec28105d0ee720e6d4b8fd332ebeb8d4890784b8b991d51e29
 WORKDIR /app
 COPY --from=cloner /source .
+COPY app/shluflix/branding/landingTemplate.js .
 RUN npm install
 CMD ["npm", "start"]
