--- a/apps/filebrowser/Dockerfile
+++ b/apps/filebrowser/Dockerfile
@@ -13,7 +13,7 @@ COPY apps/filebrowser/branding /branding/
 USER root
 
 # Possibly useful binaries
-RUN apk add --no-cache mlocate ncdu tree curl
+RUN apk add --no-cache mlocate ncdu tree curl bash
 
 # Add kubectl command (weird, I know, but we use it for some console actions)
 RUN curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl" && \
