Fix upstream version
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/filebrowser/Dockerfile
+++ b/apps/filebrowser/Dockerfile
@@ -2,7 +2,7 @@ ARG VERSION
 # FROM filebrowser/filebrowser:v${VERSION} as upstream
 
 # Until the TFA bug is fixed
-FROM filebrowser/filebrowser:2.23.0 as upstream
+FROM filebrowser/filebrowser:v2.23.0 as upstream
 
 
 
