--- a/apps/stremio-jackett/Dockerfile
+++ b/apps/stremio-jackett/Dockerfile
@@ -23,4 +23,4 @@ COPY apps/stremio-jackett/branding/index.html .
 
 EXPOSE 3000
 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "3000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "3000", "--reload"]
