Update knightcrawler addon/producer
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/knightcrawler/addon/Dockerfile
+++ b/apps/knightcrawler/addon/Dockerfile
@@ -7,19 +7,18 @@ RUN apk update && apk upgrade && \
 
 RUN git clone --depth 1 https://github.com/geek-cookbook/torrentio.elfhosted.com.git /source
 
-# Build per the original dockerfile
+# --- Build Stage ---
 FROM node:lts-alpine AS builder
 ENV CLONE_PATH=/source/src/node/addon
 
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-
 WORKDIR /app
 
-COPY --from=cloner $CLONE_PATH/package*.json .
+COPY package*.json ./
 RUN npm install
-COPY --from=cloner $CLONE_PATH/. .
+COPY . .
 RUN npm run build
 
 # --- Runtime Stage ---
@@ -32,9 +31,15 @@ WORKDIR /app
 
 ENV NODE_ENV production
 
-COPY --from=builder /app/ ./
+COPY --from=builder /app ./
 RUN npm prune --omit=dev
+
+# CIS-DI-0001
+RUN addgroup -S addon && adduser -S -G addon addon
+USER addon
 
 EXPOSE 7000
 
-ENTRYPOINT [ "pm2-runtime", "start", "ecosystem.config.cjs"]l
+ENTRYPOINT [ "pm2-runtime", "start", "ecosystem.config.cjs"]
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+    CMD pm2 ping || exit 1
