--- a/apps/knightcrawler/producer/Dockerfile
+++ b/apps/knightcrawler/producer/Dockerfile
@@ -6,14 +6,22 @@ RUN apk update && apk upgrade && \
 
 RUN git clone https://github.com/geek-cookbook/torrentio.elfhosted.com.git /source
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build-env
-ENV CLONE_PATH=/source/src/producer
-WORKDIR /App
-COPY --from=cloner $CLONE_PATH/. .
-RUN dotnet restore
-RUN dotnet publish -c Release -o out
+FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 
-FROM mcr.microsoft.com/dotnet/aspnet:8.0
+ENV CLONE_PATH=/source/src/producer
+ENV TARGETARCH=amd64
+
 WORKDIR /App
-COPY --from=build-env /App/out .
+COPY --from=cloner $CLONE_PATH/. ./
+RUN dotnet restore -a $TARGETARCH
+RUN dotnet publish -c Release --no-restore -o out -a $TARGETARCH
+
+FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine
+
+WORKDIR /App
+COPY --from=build /App/out .
+RUN addgroup -S producer && adduser -S -G producer producer
+USER producer
+HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
+  CMD pgrep -f dotnet || exit 1
 ENTRYPOINT ["dotnet", "Producer.dll"]
