Update Annatar dockerfile
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/annatar/Dockerfile
+++ b/apps/annatar/Dockerfile
@@ -9,15 +9,15 @@ RUN apk update && apk upgrade && \
 RUN git clone -b $VERSION --depth 1 https://gitlab.com/stremio-add-ons/annatar.git /source
 
 
+## Upstream Dockerfile
+
 # --- Build Stage ---
-# Use the official Python 3.11 image as a base
-FROM python:3.11-slim as builder
+FROM python:3.11 as builder
 
 # Set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
-ENV POETRY_VERSION 1.7.1
-ENV NUM_WORKERS 1
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+ENV POETRY_VERSION=1.7.1
 
 # Install Poetry
 RUN pip install "poetry==$POETRY_VERSION"
@@ -26,15 +26,13 @@ RUN pip install "poetry==$POETRY_VERSION"
 WORKDIR /app
 
 # Copy the pyproject.toml and poetry.lock files
-COPY --from=cloner /source/pyproject.toml poetry.lock* /app/
+COPY --from=cloner /source/pyproject.toml /source/poetry.lock* /app/
 
-# Install runtime dependencies using Poetry
-# --no-dev: Skip installing development dependencies
-# --no-root: Skip installing the root package (your package) at this stage
-# --no-interaction: Do not prompt for input
-# --no-ansi: Disable ANSI output
+# Install runtime dependencies using Poetry and create wheels for them
 RUN poetry config virtualenvs.create false \
-    && poetry install --no-dev --no-root --no-interaction --no-ansi
+    && poetry install --no-dev --no-root --no-interaction --no-ansi \
+    && poetry export -f requirements.txt --output requirements.txt --without-hashes \
+    && pip wheel --no-cache-dir --no-deps --wheel-dir /tmp/wheels -r requirements.txt
 
 # Copy the rest of your application's code
 COPY --from=cloner /source/annatar /app/annatar
@@ -44,32 +42,33 @@ RUN poetry build
 
 # --- Final Stage ---
 FROM python:3.11-slim as final
-ARG VERSION
 
 # Set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
-ENV DB_PATH /app/data/annatar.db
-
-ARG BUILD_VERSION=UNKNOWN
-ENV BUILD_VERSION=${VERSION}
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+ENV DB_PATH=/app/data/annatar.db
+ENV NUM_WORKERS 4
+ENV CONFIG_FILE=/config/annatar.yaml
 
 VOLUME /app/data
-# Set the working directory in the container
 WORKDIR /app
 
-# Copy only the built wheel from the builder stage
-COPY --from=builder /app/dist/*.whl /app/
-# Install the application package
-RUN pip install *.whl && rm *.whl
+# Copy wheels and built wheel from the builder stage
+COPY --from=builder /app/dist/*.whl /tmp/wheels/
+COPY --from=builder /tmp/wheels/*.whl /tmp/wheels/
 
-# Copy static website files
-COPY --from=cloner /source/static /app/static
-COPY --from=cloner /source/templates /app/templates
-COPY --from=cloner /source/run.py /app/run.py
+# # Install the application package along with all dependencies
+RUN pip install /tmp/wheels/*.whl && rm -rf /tmp/wheels
 
-# ElfHosted branding
-COPY apps/annatar/branding/branding.html.j2 /app/templates/
+# # Copy static and template files
+COPY ./static /app/static
+COPY ./templates /app/templates
 
-# Your application's default command, adjust as needed
-CMD ["python", "run.py"]
+COPY run.py /app/run.py
+
+ARG BUILD_VERSION=UNKNOWN
+ENV BUILD_VERSION=${BUILD_VERSION}
+
+COPY entrypoint.sh /app/entrypoint.sh
+
+CMD ["sh", "/app/entrypoint.sh"]
