Try to fix nasty control characters
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/plex-debrid/restricted.tmux.conf
+++ b/apps/plex-debrid/restricted.tmux.conf
@@ -1,7 +1,17 @@
-set -g default-command "date"
+# Always launch PD
+set -g default-command "/plex-debrid.sh"
 
+# "lock down" tmux
+unbind C-b
 unbind %
 unbind '"'
 unbind c
+set -g mouse off
 
+# Disable status bar
+set -g status off
 
+set -g default-terminal "tmux"
+
+# Disable special characters on scrolling
+set -g terminal-overrides 'xterm*:smcup@:rmcup@'
